<resources>
    <string name="app_name">StickCycle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_stopwatch">Activity Logger</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_graphics">Graphics</string>
    <string name="menu_history">History</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_highscore">HighScore</string>
    <string name="menu_social">Social</string>
    <string name="menu_playground">Playground</string>
    <string name="start">Start</string>
    <string name="stopButton">Stop</string>
    <string name="pauseButton">Pause</string>
</resources>
